预览和编辑页面加入右键菜单便于快速访问

--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "node version-bump.mjs && git add manifest.json versions.json"
   },
-  "keywords": ["obsidian", "image", "tagging", "gallery"],
+  "keywords": [
+    "obsidian",
+    "image",
+    "tagging",
+    "gallery"
+  ],
   "author": "Obsidian Eagle",
   "license": "MIT",
   "devDependencies": {
